# mwic

./: .coveragerc  .gitignore  .hgignore  .hgsigs  .hgtags  .pylintrc  .travis.yml  LICENSE  Makefile  README.rst  mwic  pyproject.toml  setup.py
.github/: requirements.txt
.github/workflows/: ci.yml
dict/: en  pl
doc/: Makefile  README  changelog  dependencies.rst  manpage.rst  mwic.txt  todo  todo.rst
lib/: __init__.py  cli.py  colors.py  data.py  extdict.py  intdict.py  mdict.py  ns.py  pager.py  spell.py  text.py  xdict.py
misc/: mwic4po
private/: build-source-tarball  check-rst  run-pydiatra  run-pyflakes  run-pylint  update-branch-coverage  update-line-coverage  update-version
tests/: __init__.py  alice.exp  alice.txt  coverage  multiword-a-e.exp  multiword-a-e.txt  multiword-a-h.exp  multiword-a-h.txt  multiword-a-o.exp  multiword-a-o.txt  multiword-a-u.exp  multiword-a-u.txt  multiword-a-x.exp  multiword-a-x.txt  multiword-a.k.a.exp  multiword-a.k.a.txt  multiword-allow-to.exp  multiword-allow-to.txt  multiword-allow-to@en-GB.alt  multiword-allow-to@en-GB.exp  multiword-also-also.exp  multiword-also-also.txt  multiword-amount-of-times.exp  multiword-amount-of-times.txt  multiword-an-other.exp  multiword-an-other.txt  multiword-an-u.exp  multiword-an-u.txt  multiword-an-un.exp  multiword-an-un.txt  multiword-awhile.exp  multiword-awhile.txt  multiword-be-be.exp  multiword-be-be.txt  multiword-be-consisted-of.exp  multiword-be-consisted-of.txt  multiword-be-disable.exp  multiword-be-disable.txt  multiword-be-enable.exp  multiword-be-enable.txt  (+105 more)
